# src/interface/rest/routes.py
@@ -11,12 +11,12 @@ from interface.rest.team_stats_retrieval_routes import router as team_stats_retr
 from interface.rest.team_stats_routes import router as team_stats_ingestion_router
 
 router = APIRouter()
-router.include_router(team_router, tags=["Teams"])
-router.include_router(team_stats_retrieval_router, tags=["Teams", "Stats"])
-router.include_router(game_router, tags=["Games"])
-router.include_router(player_router, tags=["Players"])
-router.include_router(player_stats_router, tags=["Players", "Stats", "Data Ingestion"])
-router.include_router(prediction_router, tags=["Predictions"])
-router.include_router(system_router, tags=["System"])
-router.include_router(data_ingestion_router, tags=["Data Ingestion"])
-router.include_router(team_stats_ingestion_router, tags=["Teams", "Stats", "Data Ingestion"])
+router.include_router(team_router)
+router.include_router(team_stats_retrieval_router)
+router.include_router(game_router)
+router.include_router(player_router)
+router.include_router(player_stats_router)
+router.include_router(prediction_router)
+router.include_router(system_router)
+router.include_router(data_ingestion_router)
+router.include_router(team_stats_ingestion_router)
